fixed contrast ratio

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --bg: whitesmoke;
   --primary: white;
-  --secondary: rgb(0, 140, 255);
+  --secondary: rgb(0, 120, 255);
   --terciary: black;
   --textcolor: rgb(58, 58, 58);
   --textHighlight: rgb(0, 0, 0);
