--- a/components/weatherBox/Weather.css
+++ b/components/weatherBox/Weather.css
@@ -17,25 +17,22 @@
 
 .input-city {
     padding: 1rem;
+    border-radius: 0.5rem;
     font-size: large;
     border: none;
     background: var(--soft);
 }
 
 .submit {
-    padding: 0.5rem 1rem;
+    padding: 0.8rem 1rem;
     font-size: large;
     cursor: pointer;
     outline: none;
-    color: white;
-    background-color: var(--secondary);
+    color: var(--primary);
+    background-color: var(--terciary);
     border: none;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem;
     transition: box-shadow 0.7s ease;
-}
-
-.submit:hover {
-    box-shadow: 5rem 5rem 0 0 rgba(0, 255, 0, 0.35) inset, -5rem -5rem 0 0 rgba(0, 255, 0, 0.35) inset;
 }
 
 .submit:active {
